# aegis

./: CMakeLists.txt  main.c  main.h
daemon/: .event_queue.h.swp  daemon.c  daemon.h  event_bus.c  event_bus.h  event_queue.c  event_queue.h
logger/: logger.c  logger.h
shared/: common.h  config.h  event.h  event_source.h  event_types.h  severity.h  subscriber.h  utils.c  utils.h
